--- a/fluxion-ajax-3/pom.xml
+++ b/fluxion-ajax-3/pom.xml
@@ -3,14 +3,14 @@
   <parent>
     <groupId>uk.ac.tgac.fluxion.tools</groupId>
     <artifactId>fluxion-tools</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>uk.ac.tgac.fluxion.ajax</groupId>
   <artifactId>fluxion-ajax-3</artifactId>
   <name>Fluxion Spring 3.x + AJAX support</name>
-  <version>1.0-alpha-4</version>
+  <version>${parent.version}</version>
   <url>http://fluxion.sourceforge.net</url>
 
   <build>
