--- a/fluxion-ajax-beans/pom.xml
+++ b/fluxion-ajax-beans/pom.xml
@@ -2,13 +2,14 @@
   <parent>
     <groupId>uk.ac.tgac.fluxion.tools</groupId>
     <artifactId>fluxion-tools</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
   </parent>
+
   <modelVersion>4.0.0</modelVersion>
   <groupId>uk.ac.tgac.fluxion.ajax.beans</groupId>
   <artifactId>fluxion-ajax-beans</artifactId>
   <name>Fluxion Ajax Beans Package</name>
-  <version>1.0-alpha-3</version>
+  <version>${parent.version}</version>
   <url>http://fluxion.sourceforge.net/fluxion-tools/fluxion-ajax-beans</url>
 
   <build>
@@ -50,7 +51,7 @@
     <dependency>
       <groupId>uk.ac.tgac.fluxion.ajax</groupId>
       <artifactId>fluxion-ajax-3</artifactId>
-      <version>1.0-alpha-4</version>
+      <version>${parent.version}</version>
       <scope>provided</scope>
     </dependency>
     <!-- apache fileupload stuff -->
