--- a/fluxion-ajax-js/pom.xml
+++ b/fluxion-ajax-js/pom.xml
@@ -2,7 +2,7 @@
  <parent>
    <groupId>uk.ac.tgac.fluxion.tools</groupId>
    <artifactId>fluxion-tools</artifactId>
-    <version>1.0-SNAPSHOT</version>
+   <version>1.0</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
@@ -10,7 +10,7 @@
   <artifactId>fluxion-ajax-js</artifactId>
   <name>Fluxion AJAX Javascript Library</name>
   <packaging>jar</packaging>
-  <version>1.0-alpha-12</version>
+  <version>${parent.version}</version>
   <url>http://fluxion.sourceforge.net/fluxion-tools/fluxion-ajax-js</url>
 
   <build>
