--- a/fluxion-spi/pom.xml
+++ b/fluxion-spi/pom.xml
@@ -5,11 +5,12 @@
   <parent>
     <artifactId>fluxion-tools</artifactId>
     <groupId>uk.ac.tgac.fluxion.tools</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
   </parent>
+
   <groupId>uk.ac.tgac.fluxion</groupId>
   <artifactId>fluxion-spi</artifactId>
-  <version>1.0-alpha-3</version>
+  <version>${parent.version}</version>
   <name>fluxion-spi</name>
   <url>http://fluxion.sourceforge.net/fluxion-tools</url>
 
